--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,15 @@
             "JoeCase\\": "src/"
         }
     },
-    "authors": [
-        {
-            "name": "Lukas",
-            "email": "git@lukasnotes.dk"
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
-    ],
-    "require": {}
+    },
+    "require": {
+        "php": "^8.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11"
+    }
 }
