--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": "^8.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11"
+        "phpunit/phpunit": "^11",
+        "phpstan/phpstan": "^1.10"
     }
 }
